--- a/src/CSharp.Kafka.Business/CSharp.Kafka.Business.csproj
+++ b/src/CSharp.Kafka.Business/CSharp.Kafka.Business.csproj
@@ -4,4 +4,14 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Application\Validations\" />
+    <Folder Include="Infra\" />
+    <Folder Include="Shared\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
 </Project>
