--- a/src/CSharp.Kafka.Business/CSharp.Kafka.Business.csproj
+++ b/src/CSharp.Kafka.Business/CSharp.Kafka.Business.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
