--- a/src/CSharp.Kafka.Api/local.settings.json
+++ b/src/CSharp.Kafka.Api/local.settings.json
@@ -1,7 +1,10 @@
 {
-    "IsEncrypted": false,
-    "Values": {
-        "AzureWebJobsStorage": "UseDevelopmentStorage=true",
-        "FUNCTIONS_WORKER_RUNTIME": "dotnet"
-    }
+  "IsEncrypted": false,
+  "Values": {
+    "FUNCTIONS_WORKER_RUNTIME": "dotnet",
+    "AzureWebJobsStorage": "UseDevelopmentStorage=true",
+    "AzureWebJobsDashboard": "UseDevelopmentStorage=true",
+    "WEBSITE_TIME_ZONE": "E. South America Standard Time",
+    "ConnectionString": "Server=localhost,1433;Database=CsharpKafka;User Id=SA; Password=@stefany@1994"
+  }
 }
