--- a/src/CSharp.Kafka.Business/CSharp.Kafka.Business.csproj
+++ b/src/CSharp.Kafka.Business/CSharp.Kafka.Business.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Confluent.Kafka" Version="1.5.3" />
     <PackageReference Include="Dapper" Version="2.0.35" />
     <PackageReference Include="FluentValidation" Version="9.2.0" />
     <PackageReference Include="Microsoft.ApplicationInsights" Version="2.14.0" />
