--- a/src/CSharp.Kafka.Consumer/appsettings.json
+++ b/src/CSharp.Kafka.Consumer/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "BootstrapServer": "192.168.0.108:9092",
+  "GroupId": "dbserver.dbo.Customers.group.id",
+  "TopicName": "dbserver.dbo.Customers"
 }
