Conclusão da PoC

--- a/src/CSharp.Kafka.Consumer/appsettings.Development.json
+++ b/src/CSharp.Kafka.Consumer/appsettings.Development.json
@@ -8,5 +8,6 @@
   },
   "BootstrapServer": "192.168.0.108:9092",
   "GroupId": "dbserver.dbo.Customers.group.id",
-  "TopicName": "dbserver.dbo.Customers"
+  "TopicName": "dbserver.dbo.Customers",
+  "SlackBaseUrl": "https://hooks.slack.com/services/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"
 }
