--- a/src/CSharp.Kafka.Consumer/CSharp.Kafka.Consumer.csproj
+++ b/src/CSharp.Kafka.Consumer/CSharp.Kafka.Consumer.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Confluent.Kafka" Version="1.5.3" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.10" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.11" />
   </ItemGroup>
 
   <ItemGroup>
